--- a/S220519081246/styles.css
+++ b/S220519081246/styles.css
@@ -1,1 +1,3 @@
-#S220519081246.main-container {background-color: tomato;}
+#live-dashboard-store-container.main-container {
+  background-color: tomato;
+}
