--- a/S220526021017/styles.css
+++ b/S220526021017/styles.css
@@ -1,1 +1,3 @@
-#S220526021017.main-container {background-color: teal;}
+#live-dashboard-store-container.main-container {
+  background-color: teal;
+}
